# rustconf

./: .gitattributes  .gitignore  README.md  default.nix  dev.py  error-handling-isnt-all-about-errors.md  index.html  justfile  notes.md  review.md  rust-for-non-systems-programmers.md  template.html  timing.nix  timing.py
css/theme/source/: rustconf-colors.sass  rustconf.sass
md-compiler/: Cargo.toml
md-compiler/html-touchup/: default.nix  gnome_fix.py  html_touchup.py
md-compiler/src/: main.rs
plugin/highlight/: rust.js  rustconf.css  rustconf.css.map  rustconf.sass  shell.js
rustconf-code/: Cargo.toml  rustfmt.toml
rustconf-code/src/: main.rs  openweather.rs  raw.rs  weather.rs
static/scripts/: main.js
static/styles/: slideshow.css  slideshow.css.map
styles/: slideshow.sass
