[package]
name = "rustconf-code"
version = "0.1.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = "2.1.1"
reqwest = "0.10.6"
derive_more = "0.99.9"
quick-xml = { version = "0.18", features = [ "serialize" ] }
thiserror = "1.0.20"
serde_json = "1.0.56"
structopt = "0.3.15"
tokio = { version =  "0.2.21", features = [ "macros" ] }
chrono = "0.4.13"
